segundo commit index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <h1>¿Qué edad tenés y a qué te dedicás?</h1>
+    <h1>¿Sabés algo de programación?</h1>
+    <h1>¿Por qué querés aprender a programar?</h1>
+    <h1>¿Cuáles son tus hobbies o intereses?</h1>  
+    <h1>¿Cuáles son tus páginas web favoritas?</h1>  
+    
+</body>
+</html>
