--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entrevista a Cuchu</title>
 </head>
 <body>
 
     <h1>¿Qué edad tenés y a qué te dedicás?</h1>
+    <p>Tengo 33 años y soy administrador de bases datos,  mi funcion es realizar mantenimiento y mantener la integridad de la base de datos</p>
     <h1>¿Sabés algo de programación?</h1>
+    <p>Si, estudie python 3 hasta un nivel intermedio, se realizar aplicaciones</p>
     <h1>¿Por qué querés aprender a programar?</h1>
+    <p>Quiero aprender este curso para integrar esta teoria solida en mis conocimientos y experiencia</p>
     <h1>¿Cuáles son tus hobbies o intereses?</h1>  
+    <p>Mis hobbies son futbol, ciclismo, ver peliculas y series en casa</p>
     <h1>¿Cuáles son tus páginas web favoritas?</h1>  
+    <p>Las paginas que mas interactuo para entretenimiento son betson, youtube ,y para informarme tn, trome, mercadolibre; y otras paginas donde busco ofertas.</p>
     
 </body>
 </html>
